; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/base/extr_number.c_number_hash.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/base/extr_number.c_number_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @number_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @number_hash(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i64 @heim_base_is_tagged_object(i8* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i8*, i8** %3, align 8
  %9 = call i64 @heim_base_tagged_object_value(i8* %8)
  store i64 %9, i64* %2, align 8
  br label %15

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = bitcast i8* %11 to i32*
  %13 = load i32, i32* %12, align 4
  %14 = sext i32 %13 to i64
  store i64 %14, i64* %2, align 8
  br label %15

15:                                               ; preds = %10, %7
  %16 = load i64, i64* %2, align 8
  ret i64 %16
}

declare dso_local i64 @heim_base_is_tagged_object(i8*) #1

declare dso_local i64 @heim_base_tagged_object_value(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
